added meta tags

--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://edisonos.com/" />
+    <meta name="description" content="EdisonOS - The most trusted digital ACT platform for tutors. Create high-quality practice tests, deliver official-like testing experience, and track student performance with comprehensive analytics." />
+    <meta name="keywords" content="ACT test prep, digital ACT platform, ACT practice tests, test prep software, ACT tutoring, student analytics, ACT mock tests" />
+    <meta name="author" content="EdisonOS" />
+    <meta property="og:title" content="EdisonOS - Digital ACT Platform for Tutors" />
+    <meta property="og:description" content="Create, deliver, and analyze ACT practice tests with our comprehensive digital platform designed for test prep professionals." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="EdisonOS - Digital ACT Platform for Tutors" />
+    <meta name="twitter:description" content="Create, deliver, and analyze ACT practice tests with our comprehensive digital platform designed for test prep professionals." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>edison</title>
+    <title>EdisonOS - Digital ACT Platform for Tutors | Test Prep Software</title>
   </head>
   <body class="font-sans" style="min-height: 1500px;">
     <div id="root"></div>
