reduced tile and meta desc for seo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://edisonos.com/" />
-    <meta name="description" content="EdisonOS - The most trusted digital ACT platform for tutors. Create high-quality practice tests, deliver official-like testing experience, and track student performance with comprehensive analytics." />
+    <meta name="description" content="EdisonOS - Digital ACT platform for tutors. Create practice tests, deliver official-like testing experience, and track student performance." />
     <meta name="keywords" content="ACT test prep, digital ACT platform, ACT practice tests, test prep software, ACT tutoring, student analytics, ACT mock tests" />
     <meta name="author" content="EdisonOS" />
     <meta property="og:title" content="EdisonOS - Digital ACT Platform for Tutors" />
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>EdisonOS - Digital ACT Platform for Tutors | Test Prep Software</title>
+    <title>EdisonOS - Digital ACT Platform for Tutors</title>
   </head>
   <body class="font-sans" style="min-height: 1500px;">
     <div id="root"></div>
