added footer page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/images/faviconed.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://edisonos.com/" />
     <meta name="description" content="EdisonOS - Digital ACT platform for tutors. Create practice tests, deliver official-like testing experience, and track student performance." />
