overflow issue solved

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Alan+Sans:wght@300..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>EdisonOS - Digital ACT Platform for Tutors</title>
   </head>
-  <body class="font-sans" style="min-height: 1500px;">
+  <body class="font-sans">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
